--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,11 @@
             <a href="/">Just Tech News</a>
         </h1>
         <nav>
-            <a href="/login">login</a>
-            <button id="logout" class="btn-no-style">logout</button>
-
+          {{#if loggedIn}}
+          <button id="logout" class="btn-no-style">logout</button>
+          {{else}}
+          <a href="/login">login</a>
+          {{/if}}
         </nav>
     </header>
     <main>
@@ -27,7 +29,10 @@
       Thanks for visiting!
     </footer>
   </div>
+
+  {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  {{/if}}
 
 </body>
 
